--- a/account.html
+++ b/account.html
@@ -28,7 +28,7 @@
                  <ul id="MenuItems">
                     <li><a href="\IWP_PROJECT\front_page.html"> Home </a></li>
                     <li><a href="products.html"> Products </a></li>
-                    <li><a href=""> About </a></li>
+		    <li><a href=""> About Anuj Sinha </a></li>
                     <li><a href=""> Contact </a></li>
                     <li><a href="account.html"> Account </a></li>
                  </ul>
